webapp/sass/profile.scss
@use 'variables' as *;
@use 'mixins/outline' as *;
@use 'components/daterangepicker';
@use 'components/labels';
@use 'components/exportdata';
@use 'components/tagsbar';
@use 'components/button';

@import '~sanitize.css';
@import '~sanitize.css/forms.css';
@import '~sanitize.css/typography.css';

@import 'login.scss';

@import '../javascript/components/FlameGraph/FlameGraphComponent/styles.css';

body {
  font: 400 16px/1.7 -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';

  background-color: $bg-color;
  color: white;
}

pre,
code,
tt {
  font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
  font-size: 14px;
}

tt {
  border-radius: 3px;
  border: 1px solid #aaa;
  padding: 2px 4px;
  background-color: rgba(255, 255, 255, 0.3);
}

.navbar {
  display: flex;
  padding: 0 15px 0 15px;
  height: 60px;
  align-items: center;

  // box-shadow: 0px 1px #fff;
  .navbar-spinner-container {
    margin: 0 10px;
    visibility: hidden;

    &.visible {
      visibility: visible;
    }
  }
}

.navbar {
  .logo {
    margin: 0;
    padding: 0;
    font-weight: 400;
    background-image: url('../images/logo-v3-small.svg');
    background-size: 40px 40px;
    background-position: 0px 8px;
    background-repeat: no-repeat;
  }

  .logo::after {
    content: 'Pyroscope';
    font-weight: 400;
    padding-left: 44px;
    font-size: 25px;
    vertical-align: text-top;
  }
}

.fx-1 {
  flex: 1;
}

select {
  @include outline;
  display: inline-block;
  position: relative;
  border-radius: 4px;
  background-color: $btn-color;
  border: 1px solid $btn-border-color;

  &:not([multiple]):not([size]) {
    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' fill='white' height='4'%3E%3Cpath d='M4 0h6L7 4'/%3E%3C/svg%3E");
  }
}

input {
  @include outline;
  display: inline-block;
  position: relative;
  border-radius: 4px;
  background-color: $btn-color;
  border: 1px solid $btn-border-color;
}

.followed-by-btn {
  border-radius: 4px 0 0 4px;
}

.followed-by-btn + .btn {
  border-left: none;
  border-radius: 0 4px 4px 0;
}

.btn.btn-active {
  background-color: #999;
  border-color: #999;
  // font-weight: 500;
}

.hidden {
  visibility: hidden;
}

.svg-renderer,
.canvas-renderer {
  padding: 0 15px;

  &.double {
    display: flex;
    width: 50%;
  }
}

.svg-container,
.canvas-container {
  border-radius: 4px;
  // box-shadow: 0 1px 2px rgba(0,0,0,0.33);
  background-color: #212124;
  border: 1px solid #141414;
}

.comparison-container {
  display: flex;
  flex-direction: row;
}

.canvas-container {
  padding: 10px;
  width: 100%;
}

body {
  // this is the width of GitHub README page. so we're targeting this width so that it looks good for demo gif
  min-width: 838px;
}

// see previous comment about min-width
@media only screen and (max-width: 1439px) {
  .navbar-links {
    display: none;
  }
}
@media only screen and (max-width: 1023px) {
  .logo::after {
    content: '';
  }
  .labels {
    margin-left: 5px;
  }
  .drp-button {
    max-width: 375px;
  }
}

#timeline-chart-single,
#timeline-chart-double,
#timeline-chart-left,
#timeline-chart-right {
  overflow: hidden;
  cursor: crosshair;
}

.flot-tick-label.tickLabel {
  white-space: nowrap;
}

$pane-width: 6px;

.panes-wrapper {
  margin: 0 -$pane-width;
  display: flex;

  &.vertical-orientation {
    flex-direction: column;
    flex: 1;
  }

  .pane {
    flex: 1;
    margin: 0 $pane-width;
    width: 50%;

    .flamegraph-header {
      padding-bottom: 5px;
      display: flex;
      justify-content: space-between;

      .row {
        display: flex;
        justify-content: center;
      }
    }

    &.vertical-orientation {
      width: 100%;
      padding: 10px;
    }

    &.hidden {
      display: none;
    }
  }
}

.diff-instructions-wrapper {
  display: flex;
  gap: 30px;
  padding-bottom: 10px;
}

.diff-instructions-wrapper-side {
  flex: 1 1 0;
}

.left-instructions-wrapper {
  display: flex;
  width: 50%;
  justify-content: center;
}

.left-instructions-text {
  color: rgba(200, 102, 204, 1);
  font-size: 12px;
}

.right-instructions-wrapper {
  display: flex;
  width: 50%;
  justify-content: center;
  margin-left: 50%;
}

.right-instructions-text {
  color: rgba(19, 152, 246, 1);
  font-size: 12px;
}

.flamegraph-table,
.flamegraph-canvas {
  width: 100%;
}
/* ... */

